fixed the navbar to include social links and appear nicely on mobile and tablet as well as desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,15 @@
     color: white;
 }
 
-/*------- Tablet Media Queries -------*/
+#social-desktop {
+    display: block;
+}
+
+#social-mobile {
+    display: none;
+}
+
+/*------- Mobile Media Queries -------*/
 
 @media only screen and (max-width: 600px) {
 
@@ -68,8 +76,14 @@
     display: inline-block;
     float: none;
 }
+
 #navbarmenu > ul {
     display: inline-flex;
+    text-align: center;
+}
+
+.navbar-toggler {
+    margin-top: 15px;
 }
 
 #band-logo {
@@ -85,8 +99,8 @@
 }
 
 .social-links li a i {
-    width: 52px;
-    height: 52px;
+    width: 46px;
+    height: 46px;
     margin: 0 10px;
     padding: 24px 0;
     border-radius: 25%;
@@ -99,6 +113,15 @@
     -moz-transition: all 0.25s ease-in-out;
     -webkit-transition: all 0.25s ease-in-out;
     -o-transition: all 0.25s ease-in-out;
+}
+
+#social-desktop {
+    display: none;
+}
+
+#social-mobile {
+    display: block;
+    margin-top: 20px;
 }
 
 }
@@ -120,9 +143,21 @@
 .navbar-brand {
     width: 300px;
     height: 50px;
-    margin-right: auto;
-    margin-left: auto;
 }
+
+#band-logo {
+    width: 400px;
+    height: 60px;
+    margin-top: -8px;
+    margin-right: 300px;
+    margin-left: -50px;
+}
+
+.navbar-toggler {
+    margin-right: 10px;
+}
+
+
 }
 
 
